--- a/style.css
+++ b/style.css
@@ -186,8 +186,59 @@ body {
     .stroke:nth-child(7){
         animation-delay: 0s;
     }
-    @media screen and (max-width: 600px) {
-        .music-player {
-            max-width: 100%;
+@media only screen and (max-width: 600px) {
+        .track-art {
+            height: 150px;
+            width: 150px;
+            margin: 15px;
+        }
+    
+        .track-name {
+            font-size: 1.5rem;
+        }
+    
+        .track-artist {
+            font-size: 1rem;
+        }
+    
+        .buttons {
+            margin-bottom: 15px;
+        }
+    
+        .seek_slider,
+        .volume_slider {
+            height: 3px;
+        }
+    
+        .seek_slider::-webkit-slider-thumb,
+        .volume_slider::-webkit-slider-thumb {
+            width: 10px;
+            height: 10px;
+        }
+    
+        .seek_slider,
+        .volume_slider {
+            width: 80%;
+        }
+    
+        .volume_slider {
+            width: 60%;
+        }
+    
+        .current-time,
+        .total-duration {
+            padding: 5px;
+        }
+    
+        i,
+        i.fa-play-circle,
+        i.fa-pause-circle,
+        i.fa-step-forward,
+        i.fa-step-backward,
+        i.fa-random,
+        i.fa-repeat,
+        p {
+            font-size: 1.5rem;
         }
     }
+    
